# tinyscrubcam

./: CMakeLists.txt  CircuitDiagram.drawio  LICENSE  README.md  detect_camera_client.py  detect_objects.cc  requirements.txt
DetectObjects_Arduino/: DetectObjects.ino  showImage.py
M0_LoRa_for_googlecoral/featherM0LoRa/: featherM0LoRa.ino
esp32CAM/esp32_camera/: esp32_camera.ino
esp32CAM/featherM0LoRa/: featherM0LoRa.ino
esp32CAMBuild/: FILESTRUCTURE.md  README.md
esp32CAMBuild/animalDetection/: README.md
esp32CAMBuild/animalDetection/esp32CamDeepSleep/: esp32_cam.ino
esp32CAMBuild/animalDetection/esp32CamLightSleep/: esp32_cam.ino
esp32CAMBuild/animalDetection/esp32CamWORKING/: esp32CamWORKING.ino  esp32_cam.ino
esp32CAMBuild/animalDetection/esp32camera/: esp32_cam.ino
esp32CAMBuild/animalDetection/featherM0LoRa/: featherM0LoRa.ino
esp32CAMBuild/boardLibs/esp32camLibs/CarDetect_inferencing/: library.properties
esp32CAMBuild/boardLibs/esp32camLibs/Person_Detection_inferencing/: library.properties
esp32CAMBuild/carDetection/esp32_cameraCARDETECT/: esp32_cameraCARDETECT.ino
esp32CAMBuild/esp32_camera/: esp32_camera.ino
esp32CAMBuild/esp32camLibs/BirdDetect_inferencing/: library.properties
esp32CAMBuild/esp32camLibs/BirdDetect_inferencing/src/tflite-model/: tflite_learn_5_compiled.cpp
esp32CAMBuild/esp32camLibs/CarDetect_inferencing/src/tflite-model/: tflite_learn_5_compiled.cpp  tflite_learn_5_compiled.h
esp32CAMBuild/esp32camLibs/UCSD-project-1_inferencing/: library.properties
esp32CAMBuild/esp32camLibs/UCSD-project-1_inferencing/src/model-parameters/: model_metadata.h
esp32CAMBuild/esp32camLibs/UCSD-project-1_inferencing/src/tflite-model/: tflite_learn_5_compiled.cpp  tflite_learn_5_compiled.h
esp32CAMBuild/esp32camera/: esp32camera.ino
esp32CAMBuild/featherM0LoRa/: featherM0LoRa.ino
esp32CAMBuild/featherM0LoRaCARDETECT/: featherM0LoRaCARDETECT.ino
esp32CAMBuild/rhinoDetection_continuous/: README.md
esp32CAMBuild/rhinoDetection_continuous/esp32cam/: README.md  esp32cam.ino
esp32CAMBuild/rhinoDetection_continuous/feather/: README.md  feather.ino
esp32CAMBuild/rhinoDetection_continuous/rhinodetector_inferencing/: README.md  library.properties
esp32CAMBuild/rhinoDetection_continuous/rhinodetector_inferencing/src/model-parameters/: model_metadata.h  model_variables.h
esp32CAMBuild/rhinoDetection_continuous/rhinodetector_inferencing/src/tflite-model/: tflite_learn_3_compiled.cpp  tflite_learn_3_compiled.h
esp32_camera/: esp32_camera.ino
googleCoral/: CMakeLists.txt  detect_objects.cc
googleCoralBuild/: README.md
googleCoralBuild/M0_LoRa_for_googlecoral/featherM0LoRa/: featherM0LoRa.ino
googleCoralBuild/googleCoral/: README.md
googleCoralBuild/googleCoral/web/: Image_view.html
web/: Image_view.html
(+151 files in other folders)
